# ListaSpesa

./: CMakeLists.txt  Item.cpp  Item.h  ItemNotFound.h  ItemsListCounter.cpp  ItemsListCounter.h  ItemsToBuyCounter.cpp  ItemsToBuyCounter.h  ListGroup.cpp  ListGroup.h  NegativeQuantity.h  Observer.cpp  Observer.h  README.md  ShoppingList.cpp  ShoppingList.h  Subject.cpp  Subject.h  TotalItemsCounter.cpp  TotalItemsCounter.h  User.cpp  User.h  main.cpp
Test/: CMakeLists.txt  RunAllTests.cpp  TestItem.cpp  TestShoppingList.cpp  TestUser.cpp
